style.css
html {
  box-sizing: border-box;
  font-size: 24px; /* fallback font size */
  font-size: min(max(16px, 4vw), 24px); /* responsive font size */

  --mainBg: #fbfbfb;
  --textHighEmph: hsla(0, 0%, 0%, .87);
  --textMedEmph: hsla(0, 0%, 0%, .75);
}

*, *:before, *:after {
  box-sizing: inherit;
}

@media (prefers-reduced-motion: reduce) { /* remove all animations and transitions for people who prefer not to see them */
  * {
    animation-play-state: paused;
    transition: none;
    scroll-behavior: auto;
  }
}

html, body {
  height: 100%;
}

body {
  margin: 20px;
  background-color: var(--mainBg);
  color: var(--textHighEmph);
  font-family: 'Roboto', sans-serif;
  padding: 20px 0;
  font-weight: normal;
  line-height: 1.5;
  text-decoration: none;
  font-style: normal;
  font-variant: normal;
  text-transform: none;
}

@media screen and (min-width: 600px) {
  body {
    margin: 40px;
  }
}

.content {
  display: grid;
}

.container {
  display: grid;
  justify-self: center;
}

.maxWidth {
  max-width: 66ch;
}

.addTopMargin {
  margin-top: 40px;
}

.cta { /* basically looks like a button */
  display: inline-block;
  padding: 1rem 2rem;
  border-radius: 5px;
  margin: 40px auto;
  color: #fbfbfb;
  background: #002BB8; /* blue */
  text-decoration: none;
  cursor: pointer;
  font-family: 'Roboto', sans-serif;
  text-align: center;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  transition: background 250ms ease-in-out,
              transform 150ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.cta:hover, .cta:focus, .cta:active {
    background: #0034E0;
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

.gridCenter {
  justify-self: center;
}

.visual {
  margin: 2rem 0;
}

.bigger {
  font-size: 1.25rem;
}

.embold {
  font-weight: bold;
}

.pic {
  max-width: 100%;
  max-height: 92vh;
  height: auto;
  object-fit: scale-down;
}

.centerText {
  text-align: center;
}

.addMoreTopMargin {
  margin-top: 2em;
}

.marginBottomZero {
  margin-bottom: 0;
}

.marginTopZero {
  margin-top: 0;
}

.medEmph {
  color: var(--textMedEmph);
}

.end {
  margin-bottom: 80px;
}

